[chromium] Regression(143825): select elements don't open when there is a marquee on the page https://bugs.webkit.org/show_bug.cgi?id=111278

Unreviewed.

This patch is a rollout of http://trac.webkit.org/changeset/143825. The
original patch caused a regression in the Chromium port.

* rendering/RenderLayer.cpp:
(WebCore::RenderLayer::scrollTo):


git-svn-id: svn://svn.chromium.org/blink/trunk@146185 bbb929c8-8fbe-4397-9dbb-9b2b20218538